[package]
name = "netsurf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.4.0"
url = "^2.2.2"

hyper = {version = "*", features=["full"]}
hyper-tls = {version = "*"}

tokio = {version="1", features=["full"]}
futures = "0.3"
to_vec = "*"
bytes = "*"
async-recursion = "1.0"
